<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JoinPartyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="25dp">

        <ScrollView
            android:id="@+id/scrollWindow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="101dp"
            android:fadeScrollbars="true"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <Button
            android:id="@+id/groupButton"
            android:layout_width="252dp"
            android:layout_height="86dp"
            android:layout_marginStart="160dp"
            android:layout_marginLeft="160dp"
            android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp"
            android:layout_marginBottom="200dp"
            android:text="Create A Group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollWindow" />

        <Button
            android:id="@+id/leaveButton"
            android:layout_width="99dp"
            android:layout_height="44dp"
            android:text="Leave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ContinueButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="97dp"
            android:layout_height="47dp"
            android:text="Continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>