<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/exitChatButton"
            android:layout_width="65dp"
            android:layout_height="37dp"
            android:text="Exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/t_users"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Current Users: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exitChatButton" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_users" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/et2"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:hint="message"
                android:textSize="20dp" />

            <Button
                android:id="@+id/bt2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Send" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1.00"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
